# AI_01_04

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_signup.py
.github/: commit_template.txt
.github/workflows/: checks.yml
ai_worker/: Dockerfile
ai_worker/core/: config.py  logger.py
app/: .dockerignore  Dockerfile  kcd_codes.csv  main.py
app/core/: config.py  logger.py
app/db/: databases.py
app/dependencies/: security.py
app/dtos/: auth.py  base.py  chat.py  dashboard.py  drug.py  health.py  medication.py  recommendations.py  scan.py  users.py
app/middleware/: __init__.py
app/models/: __init__.py  chat_health.py  chat_medication.py  chatbot.py  diseases.py  drugs.py  fields.py  health.py  prescriptions.py  recommendations.py  scans.py  user_auth_providers.py  user_credentials.py  user_features.py  users.py  vector_documents.py
app/repositories/: __init__.py  chatbot_repository.py  disease_repository.py  drug_repository.py  health_repository.py  medication_intake_repository.py  prescription_repository.py  recommendation_repository.py  scan_repository.py  user_credential_repository.py  user_repository.py  vector_document_repository.py
app/schemas/: chat.py
app/services/: auth.py  chat_base_service.py  chat_context_service.py  chat_health_service.py  chat_medi_service.py  chat_openai_service.py  dashboard.py  drugs.py  embedding.py  health.py  jwt.py  medication.py  recommendation_refiner.py  (+3 more)
docs/: 01MIGRATION_MYSQL_TO_POSTGRESQL.md  02T2-2_REPOSITORY_IMPLEMENTATION_REPORT.md  03SCRIPTS_GUIDE.md  04SERVICE_LAYER_INTEGRATION_REPORT.md  05TEST_SETUP_GUIDE.md
envs/: example.local.env  example.prod.env
frontend/: chatbot.html  dashboard.html  health.html  index.html  medications.html  profile.html  recommendations.html  refactor.py  scan_result.html  scans.html
nginx/: default.conf  prod_http.conf  prod_https.conf
scripts/: build_disease_code_mapping.py  build_disease_code_mapping_v2.py  certbot.sh  classify_unmatched_titles.py  data_retention.sh  db_backup.sh  deployment.sh  generate_common_disease_seeds.py  guideline_final.json  load_drugs.sh  load_drugs_csv.py  match_recommendations_to_kcd_v2.py  seed_disease_code_mappings.py  seed_disease_guidelines.py  seed_drug_vectors.py  seed_drugs.py  seed_recommendations.py  seed_vector_documents.py
(+124 files in other folders)
